--- a/app/src/main/res/layout/single_post.xml
+++ b/app/src/main/res/layout/single_post.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/border"
     android:orientation="vertical">
 
@@ -20,7 +20,7 @@
         android:id="@+id/title_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:padding="@dimen/text.padding"
         android:text="علی رضا"
         android:textDirection="rtl"
@@ -32,12 +32,25 @@
         android:id="@+id/description_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:padding="@dimen/text.padding"
-        android:text=" عنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متن عنوان متن "
+        android:text=" عنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متنعنوان متن عنوان متن متنعنوان متنعنوان متن عنوانمتنعنوان متننوانمتنعنوتن عنوان متنعن"
         android:textDirection="rtl"
         android:textSize="@dimen/text.font_size"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view"
         tools:layout_editor_absoluteX="0dp" />
+
+    <ImageButton
+        android:id="@+id/comment_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/icon_comment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_text_view"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
