add Login and Logout part

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     tools:context=".LoginActivity"
     android:background="#ffBE80FF"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:id="@+id/login_activity_main">
 
     <LinearLayout
         android:id="@+id/ll1"
