--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_linearLayout"
     android:layout_width="match_parent"
@@ -12,13 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/text.padding"
-            android:text="@string/enter_description" />
-
         <EditText
             android:id="@+id/description_text_view"
             android:layout_width="match_parent"
@@ -26,7 +19,6 @@
             android:hint="@string/description_text"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
-            android:labelFor="@id/description"
             android:lines="4"
             android:scrollbars="vertical" />
 
